[package]
name = "cargo-wasm2map"
version = "0.2.0"
edition = "2021"
authors = ["Mark Tolmacs <mark@lazycat.hu>"]
description = "Cargo command which generates source map for .wasm file with DWARF debug info embedded as source map."
documentation = "https://docs.rs/cargo-wasm2map"
readme = "../README.md"
repository = "https://github.com/mtolmacs/wasm2map"
homepage = "https://github.com/mtolmacs/wasm2map"
keywords = ["webassembly", "wasm", "debug", "sourcemap"]
categories = ["command-line-utilities"]
rust-version = "1.76.0"
license = "MIT OR Apache-2.0"

[dependencies]
# For -Zminimal-versions
proc-macro2 = ">= 1.0.60"
anstyle = "^1"
anstyle-parse = "^0.2"
clap_lex = "0.7.4"

[dependencies.wasm2map]
path = "../wasm2map"
features = ["memmap2", "loader"]

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
