[package]
name = "wasm2map"
version = "0.1.0"
edition = "2021"
authors = ["Mark Tolmacs <mark@lazycat.hu>"]
description = "Generates source map for .wasm file with DWARF debug info embedded as source map."
documentation = "https://docs.rs/wasm2map"
readme = "../README.md"
repository = "https://github.com/mtolmacs/wasm2map"
homepage = "https://github.com/mtolmacs/wasm2map"
keywords = ["webassembly", "wasm", "debug", "sourcemap"]
categories = ["development-tools::debugging"]
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"

[lib]

[features]
default = ["memmap2", "loader"]
loader = []

[dependencies.gimli]
version = "0.28.1"
default-features = false
features = ["read", "endian-reader"]

[dependencies.memmap2]
version = "~0.9.0"
default-features = false
optional = true

[dependencies.object]
version = ">= 0.31.1"
features = [
    "wasm"
]

[dependencies]
serde_json = "^1"
sourcemap = "^7.0"
# For -Zminimal-versions
cfg-if = ">= 0.1.5"
rand = ">= 0.3.23"
thiserror = ">= 1.0.7"
flate2 = ">= 1.0.26"

[build-dependencies]
# For -Zminimal-versions
gcc = ">= 0.3.4"

[badges]
maintenance = { status = "actively-developed" }